# Reververa

./: CMakeLists.txt  README.md
Source/: EditorContent.cpp  SimpleReverbEditor.cpp  SimpleReverbEditor.h  SimpleReverbProcessor.cpp
Source/GUI/: Dial.cpp  Dial.h  DialTextBox.cpp  FreezeButton.cpp  FuturaMedium.cpp  MyLookAndFeel.cpp  NameLabel.cpp
